name:            iconv
version:         0.3
copyright:       (c) 2006-2007 Duncan Coutts
build-depends:   base, bytestring >= 0.9
license:         BSD3
license-file:    LICENSE
author:          Duncan Coutts <duncan@haskell.org>
maintainer:      Duncan Coutts <duncan@haskell.org>
synopsis:        String encoding conversion
description:     Provides an interface to the POSIX iconv library functions
                 for string encoding conversion.
stability:       experimental
build-type:      Simple
exposed-modules: Codec.Text.IConv
other-modules:   Codec.Text.IConv.Internal
extensions:      ForeignFunctionInterface
includes:        iconv.h
-- extra-libraries: --may need iconv lib on some systems
ghc-options:     -fvia-C -Wall
extra-source-files: README examples/hiconv.hs
