name:            iconv
version:         0.4.0.2
copyright:       (c) 2006-2008 Duncan Coutts
license:         BSD3
license-file:    LICENSE
author:          Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
category:        Text
synopsis:        String encoding conversion
description:     Provides an interface to the POSIX iconv library functions
                 for string encoding conversion.
stability:       experimental
build-type:      Simple
cabal-version:   >= 1.2.1
extra-source-files: README examples/hiconv.hs

library
  exposed-modules: Codec.Text.IConv
  other-modules:   Codec.Text.IConv.Internal
  build-depends:   base >= 3 && < 5,
                   bytestring == 0.9.*
  extensions:      ForeignFunctionInterface
  includes:        iconv.h
  if os(darwin) || os(freebsd)
    -- on many systems the iconv api is part of the standard C library
    -- but on some others we have to link to an external libiconv:
    extra-libraries: iconv

  -- We need to compile via C because on some platforms (notably darwin)
  -- iconv is a macro rather than real C function. doh!
  ghc-options:     -fvia-C -Wall
